Added parameters to get emergency patients request
